src/App.scss
html {
  height: 100%
}
body {
  font-family: "Open Sans", Helvetica, Arial, serif;
  min-height: 100%;
}


.container {
  max-width: 1170px;
}

//------------Navigation Menu----------//
.header {
  background-color: white;
}

.navbar {
  padding-left: 0px;
  padding-right: 0px;
}

// Logo
.navbar-brand {
  background-image: url('./assets/lexus-logo.png');
  display: block;
  width: 216px;
  height: 50px;
  background-repeat: no-repeat;
  background-position: 0 0;
  background-size: contain;
  margin-right: 60px;
}

// Nav links
.nav-link {
  color: black !important;
  font-weight: 300;
  font-size: 12px;
}

.menu-item {
  margin-right: 30px;
}

// Nametag only
.name-tag-only {
  margin-right: 16px;
}

//Profile container
.mr-auto {
  align-items: baseline;
}

// Profile Badge 
.profile-badge {
  height: 50px;
  width: 50px;
  background-color: black;
  border-radius: 50%;
  color: white !important; // <- overrides the bootstrap style
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}
.profile-badge-text {
  font-size: 16px;
  font-weight: 600;
}

//------------Hero---------------------//

.hero {
  background-color: white;
  margin-top: 82px;
}

.control-dots {
  // Give me some style
}

.carousel-custom {
  width: 100vw;
  position: relative;
  left: calc(-50vw + 50%);
  margin-top: -200px;
}


// All slides
.slide {
  opacity: 50%;
}
//The Selected Slide
.selected {
  opacity: 100%;
}

.info {
  background: rgba(0,0,0,0.90);
  font-weight: 300;
  font-size: 14px;
  color: #FFFFFF;
  width: 370px;
  height: 352px;
  position: relative;
  z-index: 1;
  padding-left: 26px;
  padding-top: 51px;
  padding-right: 33px;
 

  h1 {
    font-weight: 300;
    font-size: 42px;
    color: #FFFFFF;
    line-height: 62px;
  }

  .p-light {
    font-weight: 300;
  }
}

.text {
  text-align: center;

}

.car-model {
  font-weight: 600;
  font-size: 16px;
}

.price-tag {
  font-weight: 300;
  font-size: 12px;
  color: #676767;
  margin-top: -17px;
}

//------------Dealerships--------------//


//Headline
.section-title{
  font-weight: 400;
  font-size: 24px;
  letter-spacing: 4.27px;
  color: black;
}

.crosshair img {
  height: 19px;
  width: 19px;
}

.headline-container {
  .headline {
    display: flex;

    img {
      margin-right: 11px;
    }
  }


  p {
    color: #676767
  }
}

.map-sidebar-container {
  display: flex;
}

//Google Maps
// Hide Google Maps Controls
.gm-svpc,
.gm-style-mtc,
.gm-control-active, 
.gm-fullscreen-control,
.gm-style-cc {
  display: none;
}
// Zoom control
.gmnoprint {
  left: 0px;
  bottom: 180px !important;
}
.custom-google-map {
  width: 70%;
}

//Sidebar
.sidebar-container {
  h2 {
    font-weight: 300;
    font-size: 20px;
    color: black;
  }
}

.car-container {
  .thumb {
    height: 43.5px;
    width: 100px;
  }
}

.btn-non-clicked {
  color: white;
  background-color: black;
  padding: 7px 8px;
  font-weight: 400;
  font-size: 8px;
  letter-spacing: 1.42px;
  line-height: 8px;
  width: 101px;
  height: 22px;
  border: none;
}

.btn-clicked {
  border: 1px solid #000000;
  border-radius: 1px;
  padding: 7px 7px 7px 9px;
  font-weight: 400;
  font-size: 8px;
  color: black;
  letter-spacing: 1.42px;
  line-height: 8px;
  width: 78px;
  height: 22px;
}

// //Since it's one-time use - !important is used for rapid styling
.MuiButton-root {

}

// .MuiButton-root:focus {
//   color: green;
// }

